--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,5 +1,14 @@
 /* app css stylesheet */
 
+body {
+  font-family: sans-serif;
+}
+
+input.h1 {
+  font-size: 2em;
+  font-weight: bold;
+}
+
 .menu {
   list-style: none;
   border-bottom: 0.1em solid black;
@@ -27,4 +36,17 @@
 .menu > li:nth-child(1):before {
   content: "";
   padding: 0;
+}
+
+.card-table {
+  position: relative;
+}
+
+.card {
+  width: 200px;
+  height: 200px;
+  display: inline-block;
+  top: 0;
+  left: 0;
+  border: thin solid #333;
 }
