Minor frontend work on main pages

--- a/app/partials/recipe-list.html
+++ b/app/partials/recipe-list.html
@@ -1,9 +1,10 @@
 <h1>My Recipes</h1>
 
 <div class="card-table">
-  <div class="card" ng-repeat="recipe in recipes"
-       ng-click="gotoRecipe(recipe.id)">
-    <h3>{{ recipe.name }}</h3>
+  <div class="card" ng-repeat="recipe in recipes">
+    <a href="#/recipes/{{ recipe.id }}">
+      <h3>{{ recipe.name }}</h3>
+    </a>
   </div>
   <div class="card">
     <a href="#/recipes/new">
