--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -1,1 +1,4 @@
-<h1>My Recipe Cards</h1>
+<h1>Recipe Book</h1>
+
+<p><a href="#/recipes">My Recipes</a></p>
+<p><a href="#/shopping">My Shopping List</a></p>
