--- a/app/partials/user.html
+++ b/app/partials/user.html
@@ -1,7 +1,7 @@
 <h1>{{ user.name }} <small>{{ user.email }}</small></h1>
 
 <form ng-submit="saveUser()">
-  <label>Name</label><input ng-model="user.name" />
+  <label for="name">Name</label><input id="name" ng-model="user.name" />
   <button class="btn" type="submit">Save</button>
 </form>
 
